# timetable-builder

./: .env.example  .gitignore  README.md  cli_main.py  compare_extractions.py  download_timetables.py  evaluate_headers.py  main.py  pyproject.toml  schemas.py
assets/js/: calendar-utils.js  timetable-state.js
comparison_output/: comparison_full.json  comparison_report.md  m1266_comparison.json  m1707_comparison.json  m17329_comparison.json  m1764_comparison.json  m2080_comparison.json  m2143_comparison.json  m2215_comparison.json  m36307_comparison.json  m55714_comparison.json  m55716_comparison.json
outputs/: all_extracted.json  timetable_extracted.json  true_timetable_extracted.json
templates/: admin.html  admin_login.html  base.html  batch.html  calendar.html  download.html  evaluate.html  extract.html  index.html
templates/_components/: alert.html  nav.html
tests/: test_calibration_orchestrator.py  test_config_generator.py  test_config_models.py
timetable_extractor/: __init__.py  blocks.py  constants.py  day_map.py  download.py  evaluate.py  extract.py  text_parser.py  time_parser.py
timetable_extractor/calibration/: __init__.py  cli.py  config_generator.py  orchestrator.py  prompts.py  report_generator.py
timetable_extractor/calibration/providers/: base.py  nemotron.py
timetable_extractor/config/: __init__.py  db.py  loader.py  models.py
