[project]
name = "celcat-timetable-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11.9",
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.0",
    "pymongo>=4.10.0",
    "httpx>=0.28.0",
    "pdf2image>=1.17.0",
    "pydantic-settings>=2.5.0",
]
